--- a/src/components/CardGrid/CardGrid.css
+++ b/src/components/CardGrid/CardGrid.css
@@ -1,6 +1,11 @@
 .grid {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  column-gap: 50px;
-  row-gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  gap: 10px;
+  flex-direction: row;
+  width: 70vw;
+  margin: 0 auto;
 }
