--- a/src/components/PersonCard/PersonCard.css
+++ b/src/components/PersonCard/PersonCard.css
@@ -1,12 +1,26 @@
-.card-image {
-  width: 20vh;
-  height: 20vh;
+.card-person {
+  display: inline-block;
+  margin: 1em;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 25vh;
+  height: 30vh;
+  text-align: center;
 }
 
 .name {
-  font-size: 1.5em;
+  font-size: 1em;
   font-weight: bold;
 }
 
-.card-person {
+.card-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.occupation {
+  font-size: 0.8em;
+  font-style: italic;
 }
