--- a/src/components/CardGrid/CardGrid.css
+++ b/src/components/CardGrid/CardGrid.css
@@ -1,11 +1,11 @@
 .grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
 
   gap: 10px;
   flex-direction: row;
-  width: 70vw;
+  width: 100%;
   margin: 0 auto;
 }
