--- a/src/components/PersonCard/PersonCard.css
+++ b/src/components/PersonCard/PersonCard.css
@@ -24,3 +24,14 @@
   font-size: 0.8em;
   font-style: italic;
 }
+
+.collected {
+  opacity: 0.5;
+}
+
+.cover {
+  position: absolute;
+  width: 25vh;
+  opacity: 1;
+  z-index: 1;
+}
